--- a/app/src/main/res/layout/topic_d_links_rv_item.xml
+++ b/app/src/main/res/layout/topic_d_links_rv_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="2dp"
@@ -75,8 +74,8 @@
             android:id="@+id/topic_d_links_rv_expandable_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="@dimen/content_padding"
-            android:paddingBottom="@dimen/content_padding"
+            android:paddingHorizontal="@dimen/common__space_size"
+            android:paddingBottom="@dimen/common__space_size"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/topic_d_links_rv_constraint_wrapper">
 
