--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                         android:layout_height="@dimen/header_nav_btn_size"
                         android:layout_marginStart="@dimen/header_nav_btn_margin"
                         android:layout_marginTop="@dimen/header_nav_btn_margin"
-                        android:src="@drawable/warlock"
+                        android:src="@drawable/computer"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +46,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-                        android:text="@string/welcome_user"
+                        android:text="@string/welcome_xx"
                         android:textColor="@color/white"
                         android:textSize="@dimen/header_nav_label_textSize"
                         android:textStyle="bold"
@@ -60,8 +60,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/header_nav_padding"
-                    android:paddingHorizontal="@dimen/content_padding"
-                    android:paddingBottom="@dimen/content_padding">
+                    android:paddingHorizontal="@dimen/common__space_size"
+                    android:paddingBottom="@dimen/common__space_size">
 
                     <TextView
                         android:id="@+id/main_tv_2"
@@ -79,7 +79,7 @@
                         android:id="@+id/main_et"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/main_search_height"
-                        android:layout_marginTop="@dimen/content_padding"
+                        android:layout_marginTop="@dimen/common__space_size"
                         android:background="@drawable/main_search_bg"
                         android:drawableStart="@drawable/baseline_search_24"
                         android:drawablePadding="16dp"
@@ -100,27 +100,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/content_padding">
+                android:padding="@dimen/common__space_size">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingBottom="@dimen/content_padding">
+                    android:paddingBottom="@dimen/main__space_size">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/common_tv_section_margin_bottom"
                         android:text="@string/topics"
                         android:textColor="@color/dark_blue"
-                        android:textSize="@dimen/content_h1"
+                        android:textSize="@dimen/common__text_h2"
                         android:textStyle="bold" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/main_rv"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/content_padding" />
+                        android:layout_height="match_parent" />
 
                 </LinearLayout>
 
@@ -129,21 +129,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingBottom="@dimen/content_padding">
+                    android:paddingBottom="@dimen/main__space_size">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/common_tv_section_margin_bottom"
                         android:text="@string/last_added_by_you"
                         android:textColor="@color/dark_blue"
-                        android:textSize="@dimen/content_h1"
+                        android:textSize="@dimen/common__text_h2"
                         android:textStyle="bold" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/main_new_topic_rv"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/content_padding" />
+                        android:layout_height="match_parent" />
 
                 </LinearLayout>
 
