--- a/app/src/main/res/layout/topic_d_slides_vp_item.xml
+++ b/app/src/main/res/layout/topic_d_slides_vp_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginHorizontal="4dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:layout_marginHorizontal="4dp">
 
     <ImageView
         android:id="@+id/topic_d_slides_rv_image_view"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/slide"
-        android:layout_height="match_parent"/>
+        android:contentDescription="@string/slide" />
 
 </LinearLayout>
